--- a/index.html
+++ b/index.html
@@ -2,71 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yasir Jawed CV</title>
+        <title>MY PROJECT</title>
 </head>
 <body>
+<h1>Yasir Portfolio</h1>
 
-<h1>Yasir Jawed</h1>
-
-<img src="./Picture Work.jpg" alt="My work picture" height="150"/>
-
-<h2>Summary</h2>
-<p>I am a hardworking and dedicated individual with experience in customer service and administration.</p>
-<hr/>
-
-<h2>Education</h2>
-<ul>
-    <li>Bachelor of Arts, Business Administration - University of XYZ (2010-2014)</li>
-</ul>
-<hr/>
-
-<h2>Work Experience</h2>
-
-<ul>
-    <li><h3>Customer Service Representative - ABC Inc.</h3></li>
-    <p>June 2014 - May 2018</p>
-        <ul>
-            <li>Answered customer inquiries via phone and email</li>
-            <li>Resolved customer complaints and issues</li>
-            <li>Maintained customer records and updated account information</li>
-        </ul>
-
-    <li><h3>Administrative Assistant - XYZ Corp.</h3></li>   
-    <p>June 2018 - Present</p> 
-        <ul>
-            <li>Assisted with scheduling appointments and meetings</li>
-            <li>Managed incoming and outgoing mail and correspondence</li>
-            <li>Prepared reports and presentations using Microsoft Office Suite</li>
-        </ul>
-</ul>
+<h2>I am a Web Developer</h2>
 
 <hr/>
 
-<h2>Skills</h2>
+<h3><a href="./MovieProject.html">My Favorite Movies</a></h3>
+<img src="./Assets1/images/movie-ranking.png" alt="This is the image of my project" height="400" " draggable="true"/>
 
-<ul>
-    <li>Customer service:</li>
-    <li>Microsoft Office Suite:</li>
-    <li>Organizational skills:</li>
-</ul>
+<h3><a href="./Birthday Invite.html">Birthday Invite</a></h3>
+<img src="./Assets1/images/birthday-invite.png" alt="This is the picture of my project" height="400">
+
 <hr/>
 
-<h2>Awards and Certifications</h2>
-<ul>
-    <li>Employee of the Month - ABC Inc. (August 2016)</li>
-</ul>
-<hr/>
-
-<h2>Other</h2>
-
-<ul>
-    <li><a href="./My-Hobbies.html">My Hobbies</a></li>
-</ul>
-
-
-
-
+<a href="../4.3 HTML Porfolio Project/public/about.html">About</a> <a href="../4.3 HTML Porfolio Project/public/contact.html">Contact</a>
 
 </body>
 </html>
